# TheArtOfHPC_vol2_parallelprogramming

./: .gitignore  LICENSE  Makefile  README  README.md  sources.txt
booksources/: EijkhoutParallelProgramming.tex  Makefile  copyright.tex  inex.tex  stripsource
booksources/appendices/: codes.tex  games.tex
booksources/chapters/: affinity.tex  architecture.tex  caf.tex  conwaysection.tex  cuda.tex  dpcpp.tex  hybrid.tex  introduction.tex  io.tex  kokkos.tex  libraries.tex  mpi-alltoall.tex  mpi-bcastreduce.tex  mpi-bigdata.tex  mpi-blocksend.tex  mpi-collective.tex  mpi-comm.tex  mpi-commdup.tex  mpi-commgroup.tex  mpi-commsplit.tex  mpi-competency.tex  mpi-course.tex  mpi-data.tex  mpi-derived.tex  mpi-elementary.tex  mpi-examples.tex  mpi-functional.tex  mpi-gatherscatter.tex  mpi-hybrid.tex  mpi-idiom-ptp.tex  mpi-idiom.tex  mpi-intercomm.tex  mpi-io.tex  mpi-mental.tex  mpi-morecollective.tex  mpi-moredata.tex  mpi-nonblock.tex  mpi-onesided.tex  mpi-opstable.tex  mpi-performcollective.tex  (+43 more)
booksources/exercises/: README
booksources/plots/: README  (+52 more)
exercises/: Makefile
exercises/exercises-cuda-cu/: CMakeLists.txt  Makefile  add1m.cu  hello.cu
makefiles/: CMakeLists.mpi.c.txt  CMakeLists.mpi.cxx.txt  CMakeLists.mpi.f08.txt  CMakeLists.omp.c.txt  CMakeLists.omp.cxx.txt  CMakeLists.omp.f.txt  CMakeLists.tbb.cxx.txt  Make.clean  Make.cmake  Make.compile  Make.cuda  Make.info  Make.kokkos_run  Make.mpi_run  Make.mpirun  Make.omp_run  Make.omp_run~  Make.public  Make.regress  Make.repo  Make.repo~  Make.run~  Make.tex  Make.texerror  Make.tex~
slides/: Makefile
(+3323 files in other folders)
